--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>mntn</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&family=Chonburi&family=Cinzel:wght@400..900&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
-      integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/main.css" />
   </head>
   <body>
     <header class="header">
-      <div class="container header-content">
+      <div class="container header-container">
         <a class="logo" href="./index.html">mntn</a>
         <nav class="heder-nav">
           <ul class="nav-list">
@@ -38,25 +36,28 @@
               <a class="nav-link" href="#">Blog</a>
             </li>
           </ul>
-          <a class="action-link" href="#">Account</a>
         </nav>
+        <div class="header-action">
+          <a class="action-link" href="#">Account</a>
+        </div>
       </div>
     </header>
-    <main>
-      <section class="hero hero-content">
-        <div class="container">
+    <main class="main">
+      <section class="hero">
+        <div class="container hero-container">
           <p class="hero-text">A Hiking guide</p>
           <h1 class="hero-title">Be prepared for the Mountains and beyond!</h1>
-          <a class="hero-link" href="#travel"></a>
+          <a class="hero-link" href="#travel">scroll down</a>
         </div>
       </section>
-      <section class="travel">
+      <section class="travel" id="travel">
         <div class="container">
           <h2 hidden>travel</h2>
           <ul class="travel-list">
             <li class="travel-item">
               <article class="travel-step">
                 <div class="step-body">
+                  <p class="step-text">GEt Started</p>
                   <h3 class="step-title">What level of hiker are you?</h3>
                   <p class="step-desk">
                     Determining what level of hiker you are can be an important
@@ -81,6 +82,7 @@
             <li class="travel-item">
               <article class="travel-step">
                 <div class="step-body">
+                  <p class="step-text">Hiking Essentials</p>
                   <h3 class="step-title">Picking the right Hiking Gear!</h3>
                   <p class="step-desk">
                     The nice thing about beginning hiking is that you don’t
@@ -105,6 +107,7 @@
             <li class="travel-item">
               <article class="travel-step">
                 <div class="step-body">
+                  <p class="step-text">where you go is the key</p>
                   <h3 class="step-title">Understand Your Map & Timing</h3>
                   <p class="step-desk">
                     To start, print out the hiking guide and map. If it’s
@@ -132,9 +135,12 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-info">
-          <a class="logo" href="#">MNTN</a>
-          <p class="footer-info-copyright">
+          <a class="logo" href="#">mntn</a>
+          <p class="footer-info-text">
             Get out there & discover your next slope, mountain & destination!
+          </p>
+          <p class="footer-info-copyright">
+            Copyright 2019 MNTN, Inc. Terms & Privacy
           </p>
         </div>
         <div class="footer-blog">
